# uplc-link

./: .dockerignore  .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  test-example.sh
app/: layout.tsx  page.tsx
app/api/verify/: route.ts
docs/: ARCHITECTURE.md
examples/: README.md
examples/plutarch-example/: AlwaysTrue.hs  cabal.project  plutarch-example.cabal
examples/plutus-example/: AlwaysTrue.hs  cabal.project  plutus-example.cabal
src/backend/: Dockerfile  README.md  build.gradle  haskel.dockerfile  settings.gradle
src/backend/gradle/wrapper/: gradle-wrapper.properties
src/backend/src/main/java/com/easy1staking/plutusscan/: PlutusScanApp.java
src/backend/src/main/java/com/easy1staking/plutusscan/config/: AppConfig.java  BlockfrostConfig.java  CorsConfig.java  OpenApiConfig.java  VerificationConfig.java
src/backend/src/main/java/com/easy1staking/plutusscan/controller/: Healthcheck.java  ScriptController.java  StatsController.java  VerificationController.java
src/backend/src/main/java/com/easy1staking/plutusscan/dto/: ParameterSchema.java  ParsedValidator.java
src/backend/src/main/resources/: application.yaml  plutus.json
src/backend/src/main/resources/db/migration/postgresql/: V1__create_verification_request_table.sql  V2__create_script_table.sql  V3__create_plutus_json_cache_table.sql
src/backend/src/test/java/com/easy1staking/plutusscan/: EnvVarInjectionTest.java  PlutusJsonParserTest.java  PlutusScanMetadataTest.java  SerdeTest.java  TxDeserializationTest.java  WalletBasedTest.java
src/frontend/: Dockerfile  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  test-example.sh
src/frontend/__tests__/: metadata-encoding.test.ts
src/frontend/app/: layout.tsx  page.tsx  sitemap.ts
src/frontend/app/api/og/: route.tsx
src/frontend/app/api/registry/: route.ts
src/frontend/app/api/test-params/: route.ts
src/frontend/app/api/verify/: route.ts
src/frontend/app/dev/: page.tsx
src/frontend/app/docs/: page.tsx
src/frontend/app/registry/: RegistryPageContent.tsx  layout.tsx  page.tsx
src/frontend/app/verify/: page.tsx
src/frontend/components/: NetworkBadge.tsx
src/frontend/components/verification/: SubmitToRegistry.tsx
src/frontend/components/wallet/: WalletConnectButton.tsx
src/frontend/lib/: config.ts
src/frontend/lib/api/: backend-client.ts
src/frontend/lib/cardano/: cbor-encoding.ts  metadata-encoder.ts  transaction-builder.ts  wallet-hooks.ts  wallet-provider.tsx
src/frontend/lib/types/: registry.ts  verification.ts  wallet.ts
src/frontend/public/: README-images.md  manifest.json  robots.txt
src/frontend/public/diagrams/: README.md
(+37 files in other folders)
