cabal-version: 3.0
name: plutarch-example
version: 0.1.0.0
license: Apache-2.0
author: uplc.link
maintainer: your@email.com
build-type: Simple

common common-definitions
  default-language: Haskell2010
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators

  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-uni-patterns
    -Wno-unused-do-bind
    -Wno-partial-type-signatures
    -Wmissing-export-lists
    -Wincomplete-record-updates
    -Wmissing-deriving-strategies
    -Wno-name-shadowing
    -Wunused-foralls
    -fprint-explicit-foralls
    -fprint-explicit-kinds

executable plutarch-example
  import: common-definitions
  main-is: AlwaysTrue.hs
  hs-source-dirs: .

  build-depends:
    base >= 4.14 && < 5,
    aeson,
    bytestring,
    cardano-api,
    plutarch >= 1.10,
    plutus-core,
    plutus-ledger-api,
    serialise,
    text

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
